syntax = "proto3";

package api.todo.v1;

import "google/api/annotations.proto";

option go_package = "todo/api/todo/v1;v1";
option java_multiple_files = true;
option java_package = "api.todo.v1";

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoReply);
    rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoReply);
    rpc ListTodo (ListTodoRequest) returns (ListTodoReply);
}

message CreateTodoRequest {
    string todo = 1;
}
message CreateTodoReply {}

message DeleteTodoRequest {
    int64 id = 1;
}
message DeleteTodoReply {}

message Todo{
    int64 id = 1;
    string content = 2;
}

message ListTodoRequest {}
message ListTodoReply {
    repeated Todo todos = 1;
}